--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "karma-browserify": "^5.1.0"
   },
   "dependencies": {
-    "browserify-ng-html2js": "^1.2.0",
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
+    "browserify-ng-html2js": "^1.2.0",
+    "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
